--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "nodemailer": "^6.9.13",
